--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CodeLab">
-        <activity android:name=".OrderActivity"></activity>
+        <activity android:name=".Favourites"></activity>
+        <activity android:name=".OrderActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
