--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CodeLab">
-        <activity android:name=".Favourites"></activity>
-        <activity android:name=".OrderActivity" />
+        <activity android:name=".NewsActivity"></activity>
+        <activity android:name=".Favourites" />
+        <activity
+            android:name=".OrderActivity"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
